sumo/tests/sumo/errors/one_edge_route/errors.sumo
Error: SUMO assumes each route to be at least two edges long ('route0' has 1).
